...
                LazyColumn(
                    modifier = Modifier.fillMaxWidth(),
                    state = listState,
                    verticalArrangement = Arrangement.spacedBy(2.dp),
                ) {
                    items(chapters, key = { it.chapterRef }) { chapter ->
                        val tag =
                            when (chapter.chapterRef) {
                                currentChapterRef -> "toc-current-chapter"
                                latestChapterRef -> "toc-latest-chapter"
                                else -> null
                            }
                        TextButton(
...
